modules/Network/main.tf
resource "azurerm_resource_group" "rg" {
  name     = "rg-core-resource"
  location = "northcentralus"
}



#######################################################################
#Backbone/core network
resource "azurerm_virtual_network" "core_vnet" { 
  name                = "core_vnet"
  address_space       = ["10.0.0.0/24"]
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
} 
resource "azurerm_subnet" "core_internal" {
  name                 = "core_internal"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.core_vnet.name
  address_prefixes     = ["10.0.0.0/24"]
}


###########NSG######



resource "azurerm_network_security_group" "Allows_in_core" {
  name                = "Allows_in_core"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  security_rule {
    name                       = "Allow-SSH"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "Allow-ICMP"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Icmp"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}



resource "azurerm_virtual_network_peering" "CoreVnet-SpokeVnet" {
  name                      = "CoreVnet-SpokeVnet"
  resource_group_name       = azurerm_resource_group.rg.name
  virtual_network_name      = azurerm_virtual_network.core_vnet.name
  remote_virtual_network_id = azurerm_virtual_network.spoke_vnet.id
}



######################################################
#First spoke Networking
resource "azurerm_virtual_network" "spoke_vnet" {
  name                = "spoke_vnet"
  address_space       = ["10.0.1.0/24"]
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
}
resource "azurerm_subnet" "spoke_internal" {
  name                 = "spoke_internal"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.spoke_vnet.name
  address_prefixes     = ["10.0.1.0/24"]
}
resource "azurerm_network_security_group" "Allows_in_spoke" {
  name                = "Allows_in_spoke"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  security_rule {
    name                       = "Allow-SSH"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "Allow-ICMP"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Icmp"
    source_port_range          = "*"
    destination_port_range     = "*"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

resource "azurerm_virtual_network_peering" "SpokeVnet-CoreVnet" {
  name                      = "SpokeVnet-CoreVnet"
  resource_group_name       = azurerm_resource_group.rg.name
  virtual_network_name      = azurerm_virtual_network.spoke_vnet.name
  remote_virtual_network_id = azurerm_virtual_network.core_vnet.id
}


#### start of public IPs ###

resource "azurerm_public_ip" "hub_pub_IP" {
  name                = "hub-pub_IP"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  allocation_method   = "Static"
  sku                 = "Standard"
}
####### load balancer in HUB ####
resource "azurerm_lb" "hub_lb" {
  name                = "hub-loadbalancer"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  sku                 = "Standard"

  frontend_ip_configuration {
    name                 = "Public_Frontend_IP"
    public_ip_address_id = azurerm_public_ip.hub_pub_IP.id
  }
}
resource "azurerm_lb_backend_address_pool" "hub_backend" {
  name                = "hub-backend_pool"
  loadbalancer_id     = azurerm_lb.hub_lb.id
  resource_group_name = azurerm_resource_group.rg.name
}
resource "azurerm_lb_probe" "hub_probe" {
  name                = "hub-healthprobe"
  resource_group_name = azurerm_resource_group.rg.name
  loadbalancer_id     = azurerm_lb.hub_lb.id
  protocol            = "Tcp"
  port                = 80
}
